--- a/style.css
+++ b/style.css
@@ -63,3 +63,46 @@ footer a {
 }
 /* BibBase Overrides */
 #bibbase_header { display: none !important; }
+
+/* --- Advising and Mentorship Page Styles --- */
+.advising-mentorship h2 {
+    font-size: 1.8em;
+    color: #222;
+    border-bottom: 2px solid #eaeaea;
+    padding-bottom: 10px;
+    margin-bottom: 25px;
+}
+
+.advising-mentorship ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.advising-mentorship li {
+    margin-bottom: 20px;
+    padding-left: 15px;
+    border-left: 3px solid #0056b3;
+    background-color: #fafafa;
+    padding: 15px;
+    border-radius: 0 5px 5px 0;
+}
+
+.advising-mentorship li strong {
+    color: #000;
+    font-size: 1.05em;
+}
+
+.advising-mentorship li em {
+    color: #555;
+}
+
+.advising-mentorship a {
+    color: #0056b3;
+    text-decoration: none;
+    font-weight: 500;
+}
+
+.advising-mentorship a:hover {
+    text-decoration: underline;
+}
