--- a/style.css
+++ b/style.css
@@ -64,22 +64,23 @@ footer a {
 /* BibBase Overrides */
 #bibbase_header { display: none !important; }
 
-/* --- Advising and Mentorship Page Styles --- */
-.advising-mentorship h2 {
+/* --- Custom Layout Page Styles --- */
+.custom-layout h2 {
     font-size: 1.8em;
     color: #222;
     border-bottom: 2px solid #eaeaea;
     padding-bottom: 10px;
     margin-bottom: 25px;
+    margin-top: 35px;
 }
 
-.advising-mentorship ul {
+.styled-list {
     list-style-type: none;
     padding: 0;
     margin: 0;
 }
 
-.advising-mentorship li {
+.styled-list > li {
     margin-bottom: 20px;
     padding-left: 15px;
     border-left: 3px solid #0056b3;
@@ -88,21 +89,36 @@ footer a {
     border-radius: 0 5px 5px 0;
 }
 
-.advising-mentorship li strong {
+.styled-list > li strong {
     color: #000;
     font-size: 1.05em;
 }
 
-.advising-mentorship li em {
+.styled-list > li em {
     color: #555;
 }
 
-.advising-mentorship a {
+/* Fix for inner standard lists (like job responsibilities) */
+.styled-list > li ul {
+    margin-top: 10px;
+    padding-left: 20px;
+    list-style-type: disc;
+}
+
+.styled-list > li ul li {
+    margin-bottom: 5px;
+    padding: 0;
+    border: none;
+    background-color: transparent;
+    border-radius: 0;
+}
+
+.custom-layout a {
     color: #0056b3;
     text-decoration: none;
     font-weight: 500;
 }
 
-.advising-mentorship a:hover {
+.custom-layout a:hover {
     text-decoration: underline;
 }
